--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 sudo: required
 language: java
-   
+
+jdk:
+  - oraclejdk8
+
 env:
   - JSAT_SOURCE_DIR=JSAT
+
 script:
-  - cd $JSAT_SOURCE_DIR && mvn clean install
+  - cd $JSAT_SOURCE_DIR 
+  - mvn clean install
+  - mvn test
